델리게이트를 이용해서 깔끔 하게 코드 짜  봄 몬스터 이동도 살짝 구현

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Assets/1_Scripts/PlayerMove.cs" />
+    <Compile Include="Assets/1_Scripts/EnemyMove.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
